tests/netconvert/import/XML/errors/xml_false_edg/options.netconvert
--edge-files=hokkaido2.edg.xml --node-files=input_nodes.nod.xml --output=net.net.xml
